<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.11">
  <GVL Name="OP20_Recipe" Id="{fc64926e-99e8-412f-a6ca-1c3f59fd3b2e}">
    <Declaration><![CDATA[
VAR_GLOBAL
	OP20_DLY_SPN_ON : INT;
	OP20_DLY_BEF_OIL : INT;
	OP20_DLY_AFT_OIL : INT;
	OP20_DLY_SPN_OFF : INT;
	OP20_VERT_SERVO_WORK_POS : REAL;
	OP20_VERT_SERVO_SFE_WORK_POS : REAL;	
END_VAR]]></Declaration>
  </GVL>
</TcPlcObject>